Fix title heading overlap in rust doc

--- a/src/librustdoc/html/static/rustdoc.css
+++ b/src/librustdoc/html/static/rustdoc.css
@@ -529,7 +529,8 @@ a {
 .content .search-results td:first-child { padding-right: 0; }
 .content .search-results td:first-child a { padding-right: 10px; }
 
-tr.result span.primitive::after { content: ' (primitive type)'; font-style: italic; color: black;
+tr.result span.primitive::after {
+	content: ' (primitive type)'; font-style: italic; color: black;
 }
 
 body.blur > :not(#help) {
@@ -743,6 +744,14 @@ span.since {
 	margin-left: 30px;
 	margin-bottom: 20px;
 	margin-top: 5px;
+}
+
+.docblock > .section-header:first-child {
+	margin-left: 15px;
+}
+
+.docblock > .section-header:first-child:hover > a:before {
+	left: -10px;
 }
 
 .enum > .collapsed, .struct > .collapsed {
